web/themes/custom/cloudy/src/css/_overrides.scss
/*
Theme Name: Bootstrap 4 Sass
Description: Bootstrap 4 with Sass
*/

/* TYPOGRAPHY */

/* Google Fonts */
@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,700,800");

/* GENERAL STYLES
-------------------------------------------------*/
html, body {
  background: $cloudy-color-neutral-0;
  position: relative;
  scroll-behavior: smooth;
}

details {
  border-radius: $border-radius;
}

/* COLORS
--------------------------------------------------*/

.bg-inverse {
  background: $cloudy-color-blue-800;
}

// Overrides classy tabs style for Cloudy editor tools
.tabs a.is-active {
  background: $cloudy-color-neutral-0;
}
.tabs a:focus, .tabs a:hover {
  background: $cloudy-color-neutral-100;
  text-decoration: none;
}

.site-name-slogan a {
  text-decoration: none;
}

.card-group img {
  margin: 0;
  width: 100%;
  height: auto;
}

.card-group .field--type-image {
  margin: 0;
}

.slick {
  width: 100%;
}

.slick > div {
  margin: 0 15px;
}

// Groups
.view-group-media-banner,
.view-group-content-banner,
.view-group-banner {
  padding: 0.5rem 1rem;
}

.view-group-media-banner .views-row,
.view-group-content-banner .views-row,
.view-group-banner .views-row {
  display: flex;
  align-items: center;
}

.view-group-media-banner .views-row .views-field img,
.view-group-content-banner .views-row .views-field img,
.view-group-banner .views-row .views-field img {
  margin-right: 1rem;
}

.view-group-media-banner .views-field a,
.view-group-media-banner .views-field a:hover,
.view-group-content-banner .views-field a,
.view-group-content-banner .views-field a:hover,
.view-group-banner .views-field a,
.view-group-banner .views-field a:hover {
  color: inherit;
  font-size: 2rem;
  text-decoration: none;
}

// Utilities

.full-width {
  width: 100vw;
  position: relative;
  left: 50%;
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
}

// Site name

.site-name-slogan a {
  color: $cloudy-color-neutral-0;
}

// Homepage customizations

.view-community-actions .list-group-item-action,
.view-audiences-homepage .list-group-item-action {
  background: $cloudy-color-neutral-200;
  border: 0;
  border-radius: $border-radius-tight;
  color: $cloudy-color-blue-600;

  .name:hover {
    color: $cloudy-color-blue-800;
    text-decoration: underline;
  }

  p {
    color: $cloudy-color-neutral-900;
  }
}

.view-topics ul.list-group-flush.row {
  padding: 0;

  .list-group-item {
    border: 0;

    &:hover {
      background: none;
    }
  }
}

.layout-main-wrapper {
  margin-top: 1.25rem;
}

ul.pagination {
  margin-top: 1rem;
  flex-wrap: wrap;

  .page-item {
    margin-bottom: $cloudy-space-1;
  }
}

.created,
.updated {
  color: $cloudy-color-neutral-500;
}

// External links

.fa-ext.extlink {
  padding-left: ($cloudy-space-4 * 0.5);
}

span.mailto::before {
  background: none;
}

/* Hide the extra spans when printing. */
@media print {
  span.extlink,
  span.mailto {
    display: none;
    padding: 0;
  }
}

.view-top-searches .item-list ul li:last-child {
  padding-right: 0;
}

.field--name-field-body-content {
  p,
  blockquote,
  hr,
  .list-group-item,
  .field--name-field-body-content ul,
  .field--name-field-body-content ol,
  body.cke_editable_themed ul,
  body.cke_editable_themed ol,
  .step ol,
  .step ul,
  .teaser__tags,
  .council-document__title {
    max-width: 729px;
  }
}

h3.field-group-format-toggler {
  max-width: 100% !important;
}

/* TODO: Fix the media flex issue that inherits from Classy */
.media {
  display: inherit !important;
}

.node-preview-container {
  position: static;
  padding: ($cloudy-space-4 * 0.5) $cloudy-space-4;
}

.ui-datepicker {
  width: auto;
}

/* embedded media */
drupal-entity {
  display: inline;
}

// TODO: decide how to place this css in either the custom module
// or a more appropriate component

#block-portlandloginblock {
  margin-top: $cloudy-space-4;
}

#block-loginmessage {
  margin-bottom: $cloudy-space-6;
}

// Override print variables
$print-page-size:                   letter !important;
$print-body-min-width:              $cloudy-breakpoint-sm;

.more-link {
  text-align: left !important;
}

// TODO: Remove when less hacky method is possible.
.featured {
  .more-link {
    margin-top: $cloudy-space-8;
  }
}

hr.separator {
  border: .25rem solid $cloudy-color-purple-900;
  border-radius: $border-radius;
  height: 0;
}

// Remove underline from links by default
a:not(:hover) {
  text-decoration: none;
}

